2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: don't define GNOME_DESKTOP_USE_UNSTABLE_API globally

2009-01-13  Luca Ferretti  <elle.uca@libero.it>

	* configure.in: 
	* capplets/network/*:
	Renamed from gnome-network-preferences to gnome-network-properties.
	Closes bug #554342

==================== 2.25.3 ====================

2008-12-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.3

2008-12-18  Bastien Nocera  <hadess@hadess.net>

	* capplets/Makefile.am:
	* capplets/sound/Makefile.am:
	* capplets/sound/gnome-settings-sound.desktop.in.in:
	* capplets/sound/icons/16x16/gnome-sound-properties.svg:
	* capplets/sound/icons/22x22/gnome-sound-properties.svg:
	* capplets/sound/icons/32x32/gnome-sound-properties.svg:
	* capplets/sound/icons/scalable/gnome-sound-properties.svg:
	* capplets/sound/mixer-support.c:
	* capplets/sound/mixer-support.h:
	* capplets/sound/pipeline-tests.c:
	* capplets/sound/pipeline-tests.h:
	* capplets/sound/sound-properties-capplet.c:
	* capplets/sound/sound-properties.glade:
	* capplets/sound/sound-theme-definition.h:
	* capplets/sound/sound-theme-file-utils.c:
	* capplets/sound/sound-theme-file-utils.h:
	* capplets/sound/sound-theme.c:
	* capplets/sound/sound-theme.h:
	* configure.in: Remove the sound capplet, it's now in gnome-media
	itself, removes libcanberra-gtk and GStreamer dependencies
	(Closes: #564871)

==================== 2.25.2 ====================

2008-12-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Fix libslab dependencies so it builds.

2008-12-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* *ChangeLog: prepare for 2.25.2 release.

2008-11-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Optionally check for PolicyKit

2008-11-23  Jens Granseuer  <jensgr@gmx.net>

	Patch by: <dmacks@netspace.org>

	* configure.in: remove eel dependency from libslab (bug #561944)

2008-11-20  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Maxim Ermilov <zaspire@rambler.ru>