@@ -60,6 +60,13 @@ AC_CHECK_FUNC(XScreenSaverQueryInfo, [
 AC_SUBST(TYPING_BREAK)
 AC_SUBST(SCREENSAVER_LIBS)
 
+PKG_CHECK_MODULES(LIBCANBERRA_GTK, libcanberra-gtk, [
+  CANBERRA_GTK=1
+  AC_SUBST(LIBCANBERRA_GTK_CFLAGS)
+  AC_SUBST(LIBCANBERRA_GTK_LIBS)
+  ], [])
+AM_CONDITIONAL(HAVE_LIBCANBERRA_GTK, test "x$CANBERRA_GTK" = "x1")
+
 AM_CONDITIONAL(HAVE_TYPING_BREAK, test $TYPING_BREAK = typing-break)
 
 dnl keyboard-properties-capplet
