@@ -28,6 +28,10 @@
 #include <gdk/gdkkeysyms.h>
 #include <gconf/gconf-client.h>
 
+#ifdef HAVE_CANBERRA_GTK
+#include <canberra-gtk.h>
+#endif
+
 #include "drwright.h"
 #include "drw-utils.h"
 #include "drw-break-window.h"
@@ -274,6 +278,9 @@ drw_break_window_init (DrwBreakWindow *window)
 	priv->clock_timeout_id = g_timeout_add (1000,
 						(GSourceFunc) clock_timeout_cb,
 						window);
+#ifdef HAVE_CANBERRA_GTK
+	ca_context_play (ca_gtk_context_get (), 0, CA_PROP_EVENT_ID, "desktop-screen-lock", NULL);
+#endif
 }
 
 static void
@@ -385,6 +392,9 @@ clock_timeout_cb (DrwBreakWindow *window)
 		 */
 		priv->clock_timeout_id = 0;
 
+#ifdef HAVE_CANBERRA_GTK
+		ca_context_play (ca_gtk_context_get (), 0, CA_PROP_EVENT_ID, "alarm-clock-elapsed", NULL);
+#endif
 		g_signal_emit (window, signals[DONE], 0, NULL);
 
 		return FALSE;
