@@ -1,4 +1,10 @@
-==================== 2.25.2 ====================
+2009-01-31  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Maxim Ermilov <zaspire@rambler.ru>
+
+	* Makefile.am:
+	* drw-break-window.c: (drw_break_window_init), (clock_timeout_cb):
+	play a sound when the display is locked or unlocked (bug #169473)
 
 ==================== 2.25.3 ====================
 ==================== 2.25.2 ====================
