@@ -1,3 +1,10 @@
+2009-01-31  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Maxim Ermilov <zaspire@rambler.ru>
+
+	* configure.in: add optional dependency on libcanberra-gtk for bug
+	#169473
+
 2009-01-25  Jens Granseuer  <jensgr@gmx.net>
 
 	* configure.in: don't define GNOME_DESKTOP_USE_UNSTABLE_API globally
